fix logo on mobile

--- a/app/assets/stylesheets/responsive/_header_layout.scss
+++ b/app/assets/stylesheets/responsive/_header_layout.scss
@@ -127,7 +127,7 @@
 }
 
 .site-title__logo {
-  @include image-replacement;
+  //@include image-replacement;
   width: $logo-width;
   height: $logo-height;
   background-size: $logo-width $logo-height;
@@ -135,9 +135,9 @@
   background-repeat: no-repeat;
   background-position: 0 0;
   display: block;
-  @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
-    background-image: image-url($logo-highdpi-filename);
-  }
+ // @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+ //   background-image: image-url($logo-highdpi-filename);
+ // }
 }
 
 
